<resources>
    <string name="app_name">Osmanlitesbihcilik</string>
    <string name="facebook_app_id">391580284901016</string>
    <string name="fb_login_protocol_scheme">fb391580284901016</string>
    <string name="dil_sec">Dil Seçiniz</string>
    <string name="dil_degistir">Diliniz Türkçe</string>
    <string name="ana_sayfa">Ana Sayfa</string>
    <string name="ara">Ara</string>
    <string name="sepet">Sepet</string>
    <string name="kesfet">Keşfet</string>
    <string name="profil">Profil</string>
    <string name="sepetiniz">Sepetiniz</string>
    <string name="sepet_gormek_icin">Sepeti görmek için giriş yapın</string>
    <string name="adet">Adet</string>
    <string name="toplam">Toplam</string>
    <string name="satin_al">Satın Al</string>
    <string name="sepet_urun_yok">Sepetinizde ürün bulunmamaktadır</string>
    <string name="alisveris_basla">Alışverişe Başla</string>
    <string name="urun_detay">Ürün Detay</string>
    <string name="sepete_ekle">Sepete Ekle</string>
    <string name="aciklama">Açıklama</string>
    <string name="sepete_eklendi">Sepete Eklendi</string>
    <string name="populer">Popüler</string>
    <string name="son_goruntulenen">Son Görüntülenenler</string>
    <string name="sepete_urun_eklemek_icin">Sepete ürün eklemek için giriş yapmalısınız</string>
    <string name="internet_baglanti">İnternet bağlantınızı kontrol ediniz</string>
    <string name="login">Giriş Yap</string>
    <string name="kayitol">Kayıt Ol</string>
    <string name="email">E-Posta</string>
    <string name="sifre">Şifre</string>
    <string name="isim">Ad</string>
    <string name="soyisim">Soyad</string>
    <string name="telefon">Telefon Numarası</string>
    <string name="kimlik_no">TC Kimlik Numarası</string>
    <string name="basarili">Başarılı</string>
    <string name="siparislerim">  \u0020 Siparişlerim</string>
    <string name="adreslerim">  \u0020 Adreslerim</string>
    <string name="kayitli_kart">  \u0020 Kayıtlı Kartlarım</string>
    <string name="profil_ayar">  \u0020 Profil Ayarları</string>
    <string name="cikis_yap">  \u0020 Çıkış Yap</string>
    <string name="cikis_yapilsin_mi">Çıkış Yapılsın Mı?</string>
    <string name="ok">Tamam</string>
    <string name="iptal">İptal</string>
    <string name="detay">Detaylar</string>
    <string name="siparis_tarih">Sipariş Tarihi</string>
    <string name="siparis_detay">Sipariş Detay</string>
    <string name="siparis_no">Sipariş No</string>
    <string name="teslimat_adres">Teslimat Adresi</string>
    <string name="odeme_bilgileri">Ödeme Bilgileri</string>
    <string name="adres_duzenle">Adres Düzenle</string>
    <string name="ulke">Ülke</string>
    <string name="adres_baslik">Adres Başlığı</string>
    <string name="posta_kodu">Posta Kodu</string>
    <string name="sehir">Şehir</string>
    <string name="ilce">İlçe</string>
    <string name="varsayilan_adres">Varsayılan Adresim Olarak Kullan</string>
    <string name="kaydet">Kaydet</string>
    <string name="adres_guncel">Adres Başarıyla Güncellendi</string>
    <string name="adres">Adres</string>
    <string name="adres_tanim">Adres Tanımı</string>
    <string name="adres_eklendi">Adres Başarıyla Eklendi</string>
    <string name="adres_ekle">Adres Ekle</string>
    <string name="kart_ekle">Yeni Kart Ekle</string>
    <string name="kart_adi">Kart Adı</string>
    <string name="kart_uzeri_isim">Kartın Üzerindeki İsim</string>
    <string name="kart_no">Kart Numarası</string>
    <string name="son_kullanma">Son Kullanma Tarihi</string>
    <string name="ay">Ay</string>
    <string name="yil">Yıl</string>
    <string name="kart_basariyla_eklendi">Kartınız Başarıyla Eklendi</string>
    <string name="dil_secin">  \u0020 Dil Değiştir</string>
    <string name="guvenli_odeme">Güvenli Ödeme</string>
    <string name="teslimat_adresi">Teslimat Adresi</string>
    <string name="ekle_duzenle">Ekle/Düzenle</string>
    <string name="fat_ayni_adres">Faturamı Aynı Adrese Gönder</string>
    <string name="fat_adres">Fatura Adresi</string>
    <string name="devam">Devam Et</string>
    <string name="kart_bilgi">Kart Bilgileri</string>
    <string name="kayitli_kart_sec">Kayıtlı Kart Seç</string>
    <string name="kart_gir">Kart Bilgilerini Gir</string>
    <string name="sepet_detay">Sepet Detay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
