<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/lin1">
    <include layout="@layout/sepet_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


<android.support.v7.widget.RecyclerView
    android:id="@+id/recycler_sepet"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

</android.support.v7.widget.RecyclerView>
            <TextView
                android:layout_margin="20dp"
                android:id="@+id/login_texr"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/sepet_gormek_icin"
                android:textColor="#800020"
                android:textStyle="bold"
                android:textSize="20sp"
                />
            <Button
                android:id="@+id/login_button"
                android:visibility="invisible"
                android:layout_margin="10dp"
                android:text="@string/login"
                android:background="#800020"
                android:textColor="#fff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:visibility="invisible"
                android:id="@+id/bosText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textSize="22sp"
                android:textStyle="bold"

                android:textColor="#800020"
                android:padding="10dp"
                android:text="@string/sepet_urun_yok"
                android:layout_gravity="center"/>
            <Button
                android:visibility="invisible"
                android:id="@+id/startshop"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_shape"
                android:layout_gravity="center_horizontal"
                android:text="@string/alisveris_basla"
                android:textColor="#fff"
                android:layout_margin="10dp"
                android:padding="10dp"/>
    <TextView
        android:id="@+id/total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="#800020"
        android:padding="10dp"/>

    <Button
        android:id="@+id/button_payment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/satin_al"
        android:textColor="#fff"
        android:background="#800020"
        android:layout_margin="15dp"/>
    <ProgressBar
        android:id="@+id/progressBar1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>


</RelativeLayout>

