<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff">

<TextView
    android:layout_centerHorizontal="true"
    android:layout_above="@id/lin1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/login"
    android:textColor="#800020"
    android:layout_margin="30sp"
    android:textSize="30sp"/>
   <LinearLayout
       android:padding="20dp"
       android:id="@+id/lin1"
       android:layout_centerInParent="true"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <EditText
           android:hint="@string/email"
           android:text="ozgurozdemirci@gmail.com"
           android:textColorHint="#800020"
           android:textColor="#800020"
           android:padding="10dp"
           android:drawableRight="@drawable/person"
            android:gravity="center"
           android:layout_marginBottom="10dp"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:background="@drawable/edittext_layout"
           android:id="@+id/et_mail"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_gravity="center_horizontal"/>
       <TextView
           android:layout_margin="5dp"
           android:textColor="#FF0000"
           android:id="@+id/error_mail"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:visibility="gone"/>
       <EditText
           android:hint="@string/sifre"
           android:text="123456"
           android:textColorHint="#800020"
           android:textColor="#800020"
           android:padding="10dp"
           android:drawableRight="@drawable/pass"
           android:gravity="center"
           android:layout_marginBottom="10dp"
           android:layout_marginLeft="16dp"
           android:layout_marginRight="16dp"
           android:background="@drawable/edittext_layout"
           android:id="@+id/et_pw"
           android:layout_width="match_parent"
           android:layout_height="50dp"
           android:layout_gravity="center_horizontal"/>
       <TextView
           android:layout_margin="5dp"
           android:textColor="#FF0000"
           android:id="@+id/error_pass"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:visibility="gone"/>

   </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_below="@id/lin1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_shape"
        android:text="@string/login"
        android:textColor="#fff" />
</RelativeLayout>