<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/back"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_close_black_24dp"
        android:layout_gravity="right"
        android:layout_margin="20dp"
        />

</LinearLayout>
    <LinearLayout
        android:id="@+id/lin1"
        android:background="#FFF"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ayarlar"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="5dp"
            android:padding="10dp"
            android:textSize="26sp"
            android:textStyle="bold"
            android:textColor="#000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Hesap"
            android:textColor="#000"
            android:padding="10dp"
            android:textStyle="bold"/>
       <TextView
           android:background="@drawable/grey_line"
           android:drawableRight="@drawable/ic_next"
           android:drawableLeft="@drawable/ic_delivery"
           android:id="@+id/orders"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:text="@string/siparislerim"
           android:textSize="14sp"
           android:padding="10dp"
           android:textColor="#000"
           android:textStyle="normal"
          />
        <TextView
            android:background="@drawable/grey_line"
            android:drawableRight="@drawable/ic_next"
            android:drawableLeft="@drawable/ic_placeholders"
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adreslerim"
            android:textSize="14sp"
            android:padding="10dp"
            android:textColor="#000"
            android:textStyle="normal"
           />
        <TextView
            android:background="@drawable/grey_line"
            android:drawableRight="@drawable/ic_next"
           android:drawableLeft="@drawable/ic_payment"
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kayitli_kart"
            android:textSize="14sp"
            android:padding="10dp"
            android:textColor="#000"
            android:textStyle="normal"
            />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Ayarlar"
            android:textColor="#000"
            android:padding="10dp"
            android:textStyle="bold"/>
        <TextView
            android:background="@drawable/grey_line"

            android:drawableLeft="@drawable/ic_notification"
            android:id="@+id/notification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Bildirimler"
            android:textSize="14sp"
            android:padding="10dp"
            android:textStyle="normal"
            android:textColor="#000"
            />

        <TextView
            android:id="@+id/settings"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/grey_line"
            android:drawableLeft="@drawable/ic_tune_black_24dp"
            android:padding="10dp"
            android:text="Seçenekler"
            android:textColor="#000"
            android:textSize="14sp"
            android:textStyle="normal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Daha Fazlası"
            android:textColor="#000"
            android:padding="10dp"
            android:textStyle="bold"/>
        <TextView
            android:background="@drawable/grey_line"

            android:drawableLeft="@drawable/ic_exit"
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cikis_yap"
            android:textSize="14sp"
            android:padding="10dp"
            android:textStyle="normal"
            android:textColor="#000"
            />

    </LinearLayout>
</LinearLayout>